@@ -968,8 +968,8 @@ $wgAutoloadLocalClasses = array(
 	'MostinterwikisPage' => 'includes/specials/SpecialMostinterwikis.php',
 	'MostlinkedCategoriesPage' => 'includes/specials/SpecialMostlinkedcategories.php',
 	'MostlinkedPage' => 'includes/specials/SpecialMostlinked.php',
-	'MostlinkedTemplatesPage' => 'includes/specials/SpecialMostlinkedtemplates.php',
 	'MostrevisionsPage' => 'includes/specials/SpecialMostrevisions.php',
+	'MosttranscludedPage' => 'includes/specials/SpecialMosttranscluded.php',
 	'MovePageForm' => 'includes/specials/SpecialMovepage.php',
 	'NewFilesPager' => 'includes/specials/SpecialNewimages.php',
 	'NewPagesPager' => 'includes/specials/SpecialNewpages.php',
