@@ -81,8 +81,8 @@ abstract class QueryPage extends SpecialPage {
 				array( 'MostimagesPage', 'Mostimages' ),
 				array( 'MostinterwikisPage', 'Mostinterwikis' ),
 				array( 'MostlinkedCategoriesPage', 'Mostlinkedcategories' ),
-				array( 'MostlinkedtemplatesPage', 'Mostlinkedtemplates' ),
 				array( 'MostlinkedPage', 'Mostlinked' ),
+				array( 'MosttranscludedPage', 'Mosttranscluded' ),
 				array( 'MostrevisionsPage', 'Mostrevisions' ),
 				array( 'FewestrevisionsPage', 'Fewestrevisions' ),
 				array( 'ShortPagesPage', 'Shortpages' ),
