@@ -1616,8 +1616,8 @@
 	"mostlinked-summary": "",
 	"mostlinkedcategories": "Most linked-to categories",
 	"mostlinkedcategories-summary": "",
-	"mostlinkedtemplates": "Most linked-to templates",
-	"mostlinkedtemplates-summary": "",
+	"mosttranscluded": "Most transcluded pages",
+	"mosttranscluded-summary": "",
 	"mostcategories": "Pages with the most categories",
 	"mostcategories-summary": "",
 	"mostimages": "Most linked-to files",
