@@ -184,8 +184,8 @@ Mostimages
 Mostinterwikis
 Mostlinked
 Mostlinkedcategories
-Mostlinkedtemplates
 Mostrevisions
+Mosttranscluded
 Move
 Mssql
 Mwstore
